--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
+</html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>CrystalsCollector</title>
+    <link rel="stylesheet" href="/assets/images/backgr.png">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/assets/javascript/game.js">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
-</head>
-    <title>Document</title>
-</head>
-<body>
-    
+<body style="background-image: url(./assets/images/backgr.png)">
+
+
+
+
+
+    <!-- html -->
+    <div class="wrapper">
+
+        <div class="header">
+            <h1>Crystal Collector</h1>
+        </div>
+
+        <div class="description">
+            <p> You will be given a random number at the start of the game. </p>
+
+            <p> There are four crystals below. By clicking on the crystal you
+                will add a specific amount of points to your total score. </p>
+
+            <p> You win the game by matching your total score to a random
+                number, you lose the game if your total score goes above
+                the random number. </p>
+
+            <p> The value of each crystal is hidden from you until you
+                click on it. </p>
+
+            <p> Each time when the game starts, the game will change the
+                values of each crystal.</p>
+        </div>
+    </div>
+    <div id="wrapper">
+        <div class="randomCompNumberBox" id="randomCompNumberBox">kseeeef</div>
+
+        <div class="losses" id="losses">LOSSES:</div>
+
+        <div class="wins" id="wins">WINS:</div>
+        <div class="playerScore" id="playerScore">PLAYER SCORE:</div>
+    </div>
+
+
+    <div class="rupee">
+        <button class="btn btn-default">
+            <img src="./assets/images/cry4.jpg" width="200" alt="200" />
+        </button>
+        <button class="btn btn-default">
+            <img src="./assets/images/crys.jpg" width="200" alt="200" />
+        </button>
+        <button class="btn btn-default">
+            <img src="./assets/images/crys3.jpg" width="200" alt="200" />
+        </button>
+        <button class="btn btn-default">
+            <img src="./assets/images/cryss.jpg" width="200" alt="200" />
+        </button>
+
+
+    </div>
+
+
 </body>
+
 </html>
